--- a/index.html
+++ b/index.html
@@ -16,30 +16,31 @@
     <p>Get the latest news on how your code is doing right in your inbox</p>
   </div><!--.form_overview-->
 </div><!--.overview_container-->
-  <hr>
   <div class="form_container">
     <form action="index.html" method="post">
+      <hr class="double_line">
+      <hr class="double_thin_line">
       <fieldset class="contact">
         <legend class="form_title">Contact Information</legend>
 
           <label for="full_name">Full Name</label>
-          <input type="text" name="user_full_name" id="full_name" placeholder="Required" required>
+          <input required type="text" name="user_full_name" id="full_name" placeholder="Required">
 
           <label for="email">Email Address</label>
-          <input type="email"  name="user_email"  id="email" placeholder="Required" required>
+          <input  required type="email"  name="user_email"  id="email" placeholder="Required">
 
           <label for="phone_number">Phone Number</label>
-          <input type"number" name="user_phone_number" id="phone_number" placeholder="">
+          <input type="tel" name="user_phone_number" id="phone_number" placeholder="000-000-0000" maxlength="12">
 
-          <label for="Address">Street Address</label>
-          <input type="text" name="user_address" id="address" placeholder="Required" required>
+          <label for="address">Street Address</label>
+          <input required type="text" name="user_address" id="address" placeholder="Required">
 
-          <label for="City">City</label>
-          <input type="text" name="user_city" id="city" placeholder="Required" required>
+          <label for="city">City</label>
+          <input required type="text" name="user_city" id="city" placeholder="Required">
 
-          <label for="State">State</label>
+          <label for="state" class="state">State</label>
           <select name="user_state" id="state">
-            <option value="" disabled selected>Choose State</option>
+            <option value="" class="selected" disabled selected>Choose State</option>
             <option value="AL">Alabama</option>
           	<option value="AK">Alaska</option>
           	<option value="AZ">Arizona</option>
@@ -94,36 +95,42 @@
           </select>
 
           <label for="zip_code">Zip Code</label>
-          <input type="text" name="user_zip_code" id="zip_code" placeholder="Required" required>
+          <input required type="text" name="user_zip_code" id="zip_code" placeholder="Required" maxlength="5">
       </fieldset><!--.contact-->
-      <hr>
+      <hr class="single_line">
       <fieldset class="newsletter">
         <legend class="form_title">Newsletter</legend>
 
         <label>Select the newsletters you would like to recieve</label>
-        <div class="">
-          <input type="checkbox" name="html_news" value="html">HTML<br>
-          <input type="checkbox" name="css_news" value="css">CSS<br>
-          <input type="checkbox" name="js_news" value="js">JavaScript<br>
+        <div class="row">
+          <input type="checkbox" name="newsletter_type" id="html_news" value="html">
+          <label for="html_news">HTML</label><br>
+          <input type="checkbox" name="newsletter_type" id="css_news" value="css">
+          <label for="css_news">CSS</label><br>
+          <input type="checkbox" name="newsletter_type" id="js_news" value="js">
+          <label for="js_news">JavaScript</label>
         </div>
 
         <label>Newsletter format</label>
-        <div class="">
+        <div class="row">
           <input type="radio" name="format" id="format_html" value="format_html">
-          <label for="format_html" class="format">HTML</label>
+          <label for="format_html" class="format">HTML</label><br>
           <input type="radio" name="format" id="format_plain-text" value="format_plain-text">
           <label for="format_plain-text" class="format">Plain Text</label>
         </div>
 
-        <label for="textarea">Other topic you'd like to hear about</label>
-        <textarea name="topics_other" id="textarea"></textarea>
+        <div class="row">
+          <label for="textarea">Other topics you'd like to hear about</label>
+          <textarea name="topics_other" id="textarea"></textarea>
+        </div>
       </fieldset><!--.newsletter-->
       <button type="submit">Sign Up</button>
     </form><!--End form section-->
   </div><!--.form_container-->
 
   <footer>
-    <p class="">&copy;Copy Right The Code Review</p>
+    <p class="">&copy; The Code Review</p>
   </footer>
+
 </body>
 </html>
